samples/_failures_safe/1761507317_db5f55_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e05cbae1.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_e05cbae1.c:187: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_e05cbae1.c:186:13: error: expected declaration or statement at end of input
  186 |             if
      |             ^~
./samples/SAFE/__tmp_e05cbae1.c:186:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e05cbae1.c:186:13: error: expected declaration or statement at end of input
